# Amaranthine-Project

./: CMakeLists.txt
.cache/clangd/index/: main.cxx.A04FF73EDA2E62B6.idx  matrix.cxx.43E50DFF4AC830B3.idx  midnight.cxx.B13F17917FF285F2.idx  midnight.hxx.068C1B3E37B11DDC.idx  polar.cxx.A9F5DC1C005F1558.idx  quaternion.cxx.4F6C6327ABF09CF2.idx  util.cxx.695A379FFABCE820.idx  utils.cxx.255774C06D87B27C.idx
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  gl.h
lib/midnight/: CMakeLists.txt  matrix.cxx  matrix.hxx  matrix.txx  midnight.hxx  polar.cxx  polar.hxx  util.cxx  util.hxx
libs/midnight/: CMakeLists.txt  matrix.cxx  matrix.cxxm  matrix.hxx  midnight.cxxm  midnight.hxx  polar.cxxm  polar.hxx  quaternion.cxx  quaternion.cxxm  util.hxx  utils.cxx  utils.cxxm
src/: CMakeLists.txt  fragment.glsl  main.cxx  mesh.cxx  mesh.hxx  model.cxx  model.hxx  node.cxx  node.hxx  scene.cxx  scene.hxx  system.cxx  system.hxx  vertex.glsl
src/com/: camera_component.cxx  camera_component.hxx  component.cxx  component.hxx  drawable_component.cxx  drawable_component.hxx
src/res/: model_resource.cxx  model_resource.hxx  resource.hxx  resource.txx  text_resource.cxx  text_resource.hxx
src/shaders/: fragment.glsl
